some fixes to spacing/formatting and layout

--- a/stylesheets/partials/layout/_header.scss
+++ b/stylesheets/partials/layout/_header.scss
@@ -9,9 +9,13 @@ header {
   display: table;
   top: 0;
 
-  h1 {
+  a {
     display: table-cell;
     vertical-align: middle;
+  }
+
+  h1 {
+    margin: 0;
     color: white;
     font-style: italic;
     font-size: 6vh;
@@ -23,7 +27,5 @@ header {
     #r {
       color: $red;
     }
-
   }
-
 }
