--- a/stylesheets/partials/modules/_modals.scss
+++ b/stylesheets/partials/modules/_modals.scss
@@ -9,6 +9,10 @@
 .rep-details {
   top: 20vh;
 
+  p.mailing-address {
+    text-transform: capitalize;
+  }
+
   img {
     max-width: 30%;
     @include border-radius(50%);
@@ -18,26 +22,31 @@
     margin-bottom: 0;
     margin-top: .2em;
   }
+
   h2 {
     font-size: 1.5em;
     margin-top: .2em;
     margin-bottom: 0;
   }
+
   h3 {
     font-size: 1.25em;
     margin-top: .2em;
   }
+
   h4 {
     font-size: 1.25em;
   }
+
   p {
     padding: 0 0;
     margin: .2em;
 
-    &:first-of-type {
+    :first-of-type {
       margin: .7em;
     }
   }
+
   a {
     text-decoration: underline;
   }
