--- a/stylesheets/partials/modules/_officials-page.scss
+++ b/stylesheets/partials/modules/_officials-page.scss
@@ -1,34 +1,32 @@
 #officials-page{
-
   text-align: center;
 
-  #rep-list {
-    font-size: 80%;
-
-    @media only screen and (min-width: $break-small) {
-      font-size: 60%
-    }
-}
-
-#address-text-container {
-  width: 75%;
-  background-color: $blue;
-  color: white;
-  padding-top: $gutter;
-  padding-bottom: $gutter;
-  margin: 0 auto;
-}
-
-#address-text p {
-  padding-right: $gutter/2;
-  padding-left: $gutter/2;
-}
+  p {
+    margin: 0 auto;
+  }
 
   a[href="#first-time-modal"] {
     display: none;
   }
-  p {
-  margin: 0 auto;
-}
 
+  #address-text-container {
+    width: 75%;
+    background-color: $blue;
+    color: white;
+    padding-top: $gutter;
+    padding-bottom: $gutter;
+    margin: 0 auto;
+  }
+
+  #address-text p {
+    padding-right: $gutter/2;
+    padding-left: $gutter/2;
+  }
+
+  #rep-list {
+    font-size: 80%;
+    @media only screen and (min-width: $break-small) {
+      font-size: 60%;
+    }
+  }
 }
