--- a/stylesheets/partials/modules/_project-info.scss
+++ b/stylesheets/partials/modules/_project-info.scss
@@ -5,7 +5,7 @@
   position: relative;
 
   h1 {
-    font-size: 20px;
+    font-size: 4vh;
     display: inline-block;
     margin: 0 auto;
     color: black;
